# TimeSaver_STM32

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
lcd1602/: custom_characters.rs  lcd1602.rs  lib.rs  readme.md
src/: encoder_interface.rs  main.rs  millis.rs  utilities.rs
