[package]
authors = ["Michael Mugnai <michael.mugnai@gmail.com>"]
edition = "2018"
name = "timesaver_stm32f767"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
embedded-hal = "0.2.3"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal.git"
branch = "main"
version = "0.7.0"
features = ["stm32f767", "rt"]

[lib]
name = "lcd1602"
path = "lcd1602/lib.rs"
test = false
bench = false

# this lets you use `cargo fix`!
[[bin]]
name = "timesaver_stm32f767"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
